--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,30 @@
   <div class="prices"></div>
 
   <script>
-    let url = "https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest?start=1&limit=10&CMC_PRO_API_KEY=b373109b-839d-4d6e-af1a-1c431dcee538";
+    /* Example in Node.js */
+    const axios = require('axios');
 
-    fetch(url)
-      .then(res => res.json())
-      .then((out) => {
-        console.log('Output: ', out);
-      }).catch(err => console.error(err));
+    let response = null;
+    new Promise(async (resolve, reject) => {
+      try {
+        response = await axios.get('https://sandbox-api.coinmarketcap.com/v1/cryptocurrency/listings/latest', {
+          headers: {
+            'X-CMC_PRO_API_KEY': 'b54bcf4d-1bca-4e8e-9a24-22ff2c3d462c',
+          },
+        });
+      } catch(ex) {
+        response = null;
+        // error
+        console.log(ex);
+        reject(ex);
+      }
+      if (response) {
+        // success
+        const json = response.data;
+        console.log(json);
+        resolve(json);
+      }
+    });
   </script>
 </body>
 
